# nisaba-capital-charting

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  InstallationLog.txt  PRODUCT.md  README.md  TODOS.md
.cargo/: config.toml
deprecated_docs/: v13.2-demo-video-script.md  v13.2-elevator-pitch.md
deprecated_docs/docs-txt/: DESIGN.txt  TODOS.txt  changelog.txt  memory_MEMORY.txt  memory_feedback_video_review.txt
docs/: INDEX.md  research-iced-3d-rendering.md  research-v11.5-explanations.md  research-wave6-data-and-astro.md  research-wave7-openbb.md  v11.6.a-header-mockup.html  v11.6.a-mockup-feedback-loop.txt  v11.7.a-paper-trail-icon-mockup.html  v11.8.c-paper-trail-icon-mockup-round3.html  v11.9-layout-mockup.html  v13.2-demo-video-script.md  v13.2-elevator-pitch.md  v13.2-pitch-deck.html  v13.2-pitch-deck.pptx  video-review-v11.1-transcript.txt  video-review-v11.4-transcript.txt  video-review-v11.5-transcript.txt  video-review-v11.6-transcript.txt  video-review-v11.8-issues-transcript.txt  video-review-v11.8.H-corrections-transcript.txt  video-review-v11.8.I-corrections-transcript.txt  video-review-v11.9-mockup-request-transcript.txt  wave9-plan.md
docs-txt/: all_migrations.txt  changelog.txt  fincept_terminal_api_catalog.txt  memory_bugs_v3_dashboard_review.txt  memory_feedback_version_docs.txt  memory_project_v4_forge_plan.txt  memory_user_vision.txt
docs/memory/: feedback_autocompact.md
docs/migrations/: 0005_earnings_dates.sql  0006_analyst_ratings.sql  0007_sentiment_scores.sql  0009_natal_positions.sql  0012_macro_indicators.sql  0015_recently_viewed.sql  0016_lagrange_alerts.sql  0020_sector_industry.sql  0022_horoscope_readings.sql  0024_fundamentals.sql  0025_named_watchlists.sql  0028_dbnomics_series.sql
docs/plans/: v5.0.0_the_council_plan.md
docs/project/: DESIGN.md
installer/: nisaba-capital-charting.iss  pursuit-astro.iss
migrations/: 0003_add_items_to_filings.sql  0004_news_articles.sql  0011_astro_scores.sql  0018_drop_price_data_fk.sql  0023_concordance.sql  0030_polymarket.sql  0033_paper_account.sql  0034_paper_portfolio.sql  0035_paper_trades.sql  0036_rss_tone_scores.sql  0037_aspect_patterns.sql  0038_price_data_source.sql  0039_fundamentals_data_source.sql  0040_analyst_targets.sql  0041_eclipses.sql  0042_data_freshness_view.sql  0044_favorites.sql  0045_wiki_summary.sql  0046_wave7_providers.sql
mockups/: v12.1-pill-notifications.html  v13.1-bell-options.html
scripts/: build_v13.2_pptx.py
src/: config.rs  indicators.rs  lib.rs  models.rs  stats.rs
src/astrology/: arabic_parts.rs  aspects.rs  critical.rs  decans.rs  eclipses.rs  ephemeris.rs  fixed_stars.rs  interpretation.rs  mod.rs  natal.rs  patterns.rs  profections.rs  (+5 more)
(+116 files in other folders)
