[package]
name = "pursuit_week4_automation"
version = "7.3.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[[bin]]
name = "dashboard"
path = "src/dashboard/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "form", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "rust_decimal"] }
rust_decimal = "1"
governor = "0.6"
tokio-cron-scheduler = "0.10"
config = "0.14"
iced = { version = "0.13", features = ["tokio", "canvas"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
open = "5"
notify-rust = "4"
roxmltree = "0.20"
swiss-eph = { version = "0.2", features = ["embedded-ephe"] }
rfd = "0.15"
csv = "1"
feed-rs = "2"
