[package]
name = "pursuit_week4_automation"
version = "11.0.0"
edition = "2021"

[[bin]]
name = "scraper"
path = "src/scraper/main.rs"

[[bin]]
name = "dashboard"
path = "src/dashboard/main.rs"

[[bin]]
name = "sidecar"
path = "src/sidecar/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "native-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "rust_decimal"] }
rust_decimal = "1"
governor = "0.6"
tokio-cron-scheduler = "0.10"
config = "0.14"
iced = { version = "0.14", features = ["tokio", "canvas", "image"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
open = "5"
notify-rust = "4"
roxmltree = "0.20"
swiss-eph = { version = "0.2", features = ["embedded-ephe"] }
rfd = "0.15"
csv = "1"
feed-rs = "2"
bytemuck = { version = "1", features = ["derive"] }

# Wave 8 — sidecar HTTP API
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# v12.0.A — Windows toast notification real fix. Creates an AUMID-bound
# Start Menu shortcut via IShellLinkW + IPropertyStore.SetValue so
# notify-rust's Toast::show() resolves (HRESULT 0x80070005 fix).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_FileSystem",
    "Win32_Storage_EnhancedStorage",
] }
